# ufes

./: README.md
graduacao/tcc/avalanche-addons/: .gitignore  pyproject.toml
graduacao/tcc/avalanche-addons/avalanche_addons/dataset/: __init__.py  animals10.py
graduacao/tcc/avalanche-addons/avalanche_addons/plugins/: __init__.py  eeil.py
graduacao/tcc/avalanche-addons/avalanche_addons/strategy/: dmc.py
graduacao/tcc/avalanche-addons/avalanche_addons/utils/: __init__.py  dmc_train.py  resnet.py
graduacao/tcc/avalanche-addons/examples/: dmc.py  eeil.py  joint_training.py  naive.py
mestrado/computacao_natural/natural-computing-tasks/: .gitignore  pyproject.toml
mestrado/computacao_natural/natural-computing-tasks/natural_computing_tasks/first_task/analysis/: best_models.py  boxplots.py  concatenate.py
mestrado/computacao_natural/natural-computing-tasks/natural_computing_tasks/first_task/scripts/: baseline_prediction.py  baseline_regression.py  prediction.py  regression.py  script.py
mestrado/gpt/themis/: .gitignore  README.md  pyproject.toml
mestrado/gpt/themis-backend/: .env  .gitignore  README.md  pyproject.toml
mestrado/gpt/themis-backend/themis_backend/: config.py
mestrado/gpt/themis-backend/themis_backend/application/: app.py
mestrado/gpt/themis-backend/themis_backend/application/adapters/: __init__.py  request_adapter.py
mestrado/gpt/themis-backend/themis_backend/application/factories/: __init__.py  authenticate.py  clear_chat.py  continue_answer.py  delete_message.py  get_last_message.py  get_messages_compose.py  refresh_token.py  sign_in.py  user_create.py
mestrado/gpt/themis-backend/themis_backend/application/routes/: __init__.py  message.py  user.py
mestrado/gpt/themis-backend/themis_backend/application/setup/: __init__.py  setup_exceptions.py  setup_routes.py  setup_startup.py
mestrado/gpt/themis-backend/themis_backend/domain/entities/: user.py  (+3 more)
mestrado/gpt/themis-backend/themis_backend/infra/: __init__.py  database.py
mestrado/gpt/themis/data/csv/: oab_provas.csv
mestrado/gpt/themis/data/sqlite/: multiple_choice_questions.db  oab_provas.db  single_questions.db
mestrado/gpt/themis/notebooks/: canarim_finetuning.ipynb
mestrado/gpt/themis/themis/data/: convert_oab.py  convert_vade_mecum.py  oab_database.py  vade_mecum_database.py
mestrado/gpt/themis/themis/model/: adapter.py
mestrado/gpt/themis/themis/pdf/: constants.py  pdf_extractor.py  pdf_layout.py  utils.py
mestrado/gpt/themis/themis/prompts/: generate_instructions.py  generate_multi_choice_questions.py  generate_prompts.py  generate_questions.py  load_multi_choice.py  load_single_choice.py
mestrado/gpt/themis/themis/scripts/: pdf_scraping.py  web_oab_scraping.py
mestrado/outros/PLDCA-master/: .gitignore  example_config.yaml  pyproject.toml
mestrado/outros/PLDCA-master/pldca/: adapt.py  train.py
mestrado/outros/PLDCA-master/pldca/data/: dataloader.py  dataset.py  transform.py
mestrado/outros/PLDCA-master/pldca/net/: resnet.py
mestrado/outros/PLDCA-master/pldca/utils/: buffer.py  files.py  losses.py  parsers.py  prototype.py  test.py
mestrado/outros/PLDCA-master/scripts/: experiments.py  generate_office31_splits.py
(+688 files in other folders)
