[tool.poetry]
name = "natural-computing-tasks"
version = "0.1.0"
description = ""
authors = ["Gabriel Soares Baptista <gsoaresbaptista@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.1"
scikit-opt = "^0.6.6"
natural-computing = {git = "https://github.com/gsoaresbaptista/natural-computing.git"}


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
